distributed-backend/orchestration/kubernetes/overlay/local/local-config-patches.yaml
apiVersion: v1
kind: Service
metadata:
  name: quilkin
spec:
  type: NodePort
  ports:
    - name: udp
      port: 26001
      targetPort: udp
      protocol: UDP
      nodePort: 32601
